--- a/estes-menus/src/app/app.component.html
+++ b/estes-menus/src/app/app.component.html
@@ -1,4 +1,2 @@
-<mat-slider min="1"
-            max="100"
-            step="1"
-            value="1"></mat-slider>
+<app-navigation></app-navigation>
+<router-outlet></router-outlet>
