dropdown list added

--- a/estes-menus/src/app/navigation/navigation.component.html
+++ b/estes-menus/src/app/navigation/navigation.component.html
@@ -24,7 +24,7 @@
                     *ngIf="isHandset$ | async">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span>Estes Menus</span>
+            <span class="title">Estes Recipes</span>
         </mat-toolbar>
         <router-outlet></router-outlet>
     </mat-sidenav-content>
