--- a/estes-menus/src/app/navigation/navigation.component.scss
+++ b/estes-menus/src/app/navigation/navigation.component.scss
@@ -3,7 +3,7 @@
   }
   
   .sidenav {
-    width: 200px;
+    width: 150px;
   }
   
   .sidenav .mat-toolbar {
@@ -20,3 +20,6 @@
           0 1px 18px 0 rgba(0,0,0,.12);
   }
   
+  .title {
+    margin-left: .5em;
+  }
