kebabs added basic HTML

--- a/estes-menus/src/app/navigation/navigation.component.html
+++ b/estes-menus/src/app/navigation/navigation.component.html
@@ -10,7 +10,7 @@
             <a mat-list-item
                routerLink="/home">Home</a>
             <a mat-list-item
-               routerLink="/menus">Menus</a>
+               routerLink="/menus">Recipes</a>
             <mat-divider></mat-divider>
         </mat-nav-list>
     </mat-sidenav>
