--- a/estes-menus/src/app/home/home.component.scss
+++ b/estes-menus/src/app/home/home.component.scss
@@ -1,4 +1,12 @@
-h3 {
+* {
     text-align: center;
-    color: rgb(150,150,150);
+}
+
+h1, h2 {
+    color: rgb(100,100,100);
+}
+
+h2 {
+    font-weight: 400;
+    color: rgb(130,130,130);
 }
