--- a/estes-menus/src/app/menus/menus.component.scss
+++ b/estes-menus/src/app/menus/menus.component.scss
@@ -1,3 +1,28 @@
 .recipes-main {
     margin-left: 1em;
 }
+
+* {
+    color: rgb(90,90,90);
+}
+
+.recipe-description {
+    font-weight: 300;
+}
+
+.info {
+    text-transform: uppercase;
+}
+
+.info-data {
+    text-transform: capitalize;
+    font-weight: 400;
+}
+
+h2, h3, h4 {
+    color: rgb(90,90,90);
+}
+
+h4 {
+    font-weight: 500;
+}
