style fixes, image resolution

--- a/estes-menus/src/app/menus/menus.component.html
+++ b/estes-menus/src/app/menus/menus.component.html
@@ -12,7 +12,8 @@
 
     <div *ngIf="selectedValue==='kebabs'">
         <h2 class="recipe-title">Mediterranean Chicken Kebabs</h2>
-        <img src="../../assets/images/Mediterranean-Chicken-Kebabs-1-150x150.jpg">
+        <img class="main-recipe-image"
+             src="../../assets/images/Mediterranean-Chicken-Kebabs-1-full-size.jpg">
         <p class="recipe-description">Juicy and flavorful Grilled Mediterranean Chicken Kebabs marinated in olive oil,
             lemon juice, garlic, and spices make for a light, delicious and easy dinner.</p>
         <h4 class="info">Prep Time: <span class="info-data">40 min.</span></h4>
@@ -20,7 +21,10 @@
         <h4 class="info">Total Time: <span class="info-data">55 min.</span></h4>
         <h4 class="info">Servings: <span class="info-data">10 skewers</span></h4>
         <h4 class="info">Calories: <span class="info-data">228kcal</span></h4>
-        <h4 class="info">Author: <span class="info-data">Neli Howard | Delicious Meets Healthy</span></h4>
+        <h4 class="info">Author: <span class="info-data">Neli Howard | <a class="website"
+                   target="_blank"
+                   href="https://www.deliciousmeetshealthy.com/grilled-mediterranean-chicken-kebabs/">Delicious Meets
+                    Healthy</a></span></h4>
         <h3>Ingredients:</h3>
         <h4>Chicken Kebabs</h4>
         <ul>
@@ -68,5 +72,9 @@
         <p>The nutrition label doesn't take into account that the marinade is discarded.</p>
         <h3>Nutrition:</h3>
         <img src="../../assets/images/Annotation 2020-07-11 134958.png">
+        <p><em>Taken from <a class="website"
+                   target="_blank"
+                   href="https://www.deliciousmeetshealthy.com/grilled-mediterranean-chicken-kebabs/">DeliciousMeetsHealthy.com</a></em>
+        </p>
     </div>
 </div>
