--- a/estes-menus/src/app/menus/menus.component.scss
+++ b/estes-menus/src/app/menus/menus.component.scss
@@ -6,6 +6,10 @@
     color: rgb(90,90,90);
 }
 
+.main-recipe-image {
+    width: 50%;
+}
+
 .recipe-description {
     font-weight: 300;
 }
@@ -25,4 +29,9 @@ h2, h3, h4 {
 
 h4 {
     font-weight: 500;
+}
+
+.website {
+    text-decoration: none;
+    color: darkcyan;
 }
