more recipe categories

--- a/estes-menus/src/app/home/home.component.html
+++ b/estes-menus/src/app/home/home.component.html
@@ -1,2 +1,9 @@
 <h1>Welcome!</h1>
-<h2>Enjoy the Estes Park Family Reunion Recipes</h2>
+<h2>Enjoy this Recipes App</h2>
+<div class="footer">
+    <p class="copyright">All effort has been made to give credit to original authors</p>
+    <p class="copyright">Questions, corrections
+        or feedback? Message me <a class="website"
+           href="mailto: jesse.lind@gmail.com">here</a></p>
+    <p class="copyright">Copyright &#169; 2020 by Jesse Lind</p>
+</div>
