--- a/estes-menus/src/app/navigation/navigation.component.html
+++ b/estes-menus/src/app/navigation/navigation.component.html
@@ -10,7 +10,11 @@
             <a mat-list-item
                routerLink="/home">Home</a>
             <a mat-list-item
-               routerLink="/menus">Recipes</a>
+               routerLink="/estes-recipes">Estes Park 2020 Recipes</a>
+            <a mat-list-item
+               routerLink="/jrl-recipes">Jesse & Rebekah's Favorites</a>
+            <a mat-list-item
+               routerLink="/aa-recipes">Andrea's Favorites</a>
             <mat-divider></mat-divider>
         </mat-nav-list>
     </mat-sidenav>
@@ -24,7 +28,7 @@
                     *ngIf="isHandset$ | async">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span class="title">Estes Recipes</span>
+            <span class="title">Recipes</span>
         </mat-toolbar>
         <router-outlet></router-outlet>
     </mat-sidenav-content>
