--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -1,4 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.recipe {
+    color: rgb(90,90,90);
+}
+
+p {
+    color: rgb(90,90,90);
+}
+
+h2, h3, h4 {
+    color: rgb(90,90,90);
+}
+
+h4 {
+    font-weight: 500;
+}
+
+.website {
+    text-decoration: none;
+    color: darkcyan;
+}
+
+.main-recipe-image {
+    width: 50%;
+}
+
+.recipe-description {
+    font-weight: 300;
+}
+
+.info {
+    text-transform: uppercase;
+}
+
+.info-data {
+    text-transform: capitalize;
+    font-weight: 400;
+}
+
+.recipes-main {
+    margin-left: 1em;
+}
+
+.copyright {
+    font-weight: 300;
+    font-size: .8rem;
+    margin: 0 1rem 0 1rem;
+}
+
+.footer {
+    margin-top: 20rem;
+}
