commented out incomplete template code

--- a/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
+++ b/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
@@ -1,6 +1,6 @@
 <div class="recipes-main">
     <h3>Jesse & Rebekah's Favorite Recipes</h3>
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
         <mat-label>Select recipe...</mat-label>
         <mat-select [(ngModel)]="selectedValue">
             <mat-option *ngFor="let recipe of recipes"
@@ -8,5 +8,5 @@
                 {{recipe.viewValue}}
             </mat-option>
         </mat-select>
-    </mat-form-field>
+    </mat-form-field> -->
 </div>
