added recipe interface; first recipe created w/ interface

--- a/estes-menus/src/app/menus/menus.component.html
+++ b/estes-menus/src/app/menus/menus.component.html
@@ -16,8 +16,7 @@
             <img class="main-recipe-image"
                  src="../../assets/images/Mediterranean-Chicken-Kebabs-1-full-size.jpg">
             <p class="recipe-description">Juicy and flavorful Grilled Mediterranean Chicken Kebabs marinated in olive
-                oil,
-                lemon juice, garlic, and spices make for a light, delicious and easy dinner.</p>
+                oil, lemon juice, garlic, and spices make for a light, delicious and easy dinner.</p>
             <h4 class="info">Prep Time: <span class="info-data">40 min.</span></h4>
             <h4 class="info">Cook Time: <span class="info-data">10 min.</span></h4>
             <h4 class="info">Total Time: <span class="info-data">55 min.</span></h4>
@@ -56,26 +55,19 @@
                 <li>Mix the other HALF of the ingredients in the same bowl pour into a ziplock bag with the vegetables.
                     Marinade for at least 30 minutes.</li>
                 <li>If you are using wood skewers, while the chicken and veggies are marinating, soak the skewers in
-                    water
-                    for about 15 minutes. You need to soak wooden skewers in water for about 20- 30 minutes to keep them
-                    from igniting right there on the grill. I have also noticed that it's much easier to slide out the
-                    meat
-                    and veggies on your plate if the skewers have been soaked before grilling.</li>
+                    water for about 15 minutes. You need to soak wooden skewers in water for about 20- 30 minutes to
+                    keep them from igniting right there on the grill. I have also noticed that it's much easier to slide
+                    out the meat and veggies on your plate if the skewers have been soaked before grilling.</li>
             </ol>
             <h4>Chicken Kebabs</h4>
             <ol>
                 <li>Thread the chicken and peppers and onions on the skewers. I usually place about 5-6 chicken pieces
-                    and a
-                    combo of peppers and onion in between.</li>
+                    and a combo of peppers and onion in between.</li>
                 <li>Heat an outdoor grill or indoor grill pan over medium-high heat. Spray the grates lightly with oil
-                    and
-                    grill for about 5 minutes on each side, or until the center is no longer pink.</li>
+                    and grill for about 5 minutes on each side, or until the center is no longer pink.</li>
                 <li>You can also bake this Mediterranean chicken skewers in the oven if you want to. Preheat the oven to
-                    425
-                    F. Place chicken skewers on roasting racks over two foil-lined baking sheets and bake for about
-                    10-15
-                    minutes, turn over once and bake for another 10 - 15 minutes on the other side, or until they are
-                    baked
+                    425F. Place chicken skewers on roasting racks over two foil-lined baking sheets and bake for about
+                    10-15 minutes, turn over once and bake for another 10 - 15 minutes on the other side, or until they are baked
                     through.</li>
             </ol>
             <h3>Notes:</h3>
