--- a/estes-menus/src/app/menus/menus.component.html
+++ b/estes-menus/src/app/menus/menus.component.html
@@ -1,83 +1,58 @@
 <div class="recipes-main">
     <h3>Estes Park 2020 Recipes</h3>
-    <mat-form-field appearance="outline">
-        <mat-label>Select recipe...</mat-label>
-        <mat-select [(ngModel)]="selectedValue">
-            <mat-option *ngFor="let recipe of recipes"
-                        [value]="recipe.value">
-                {{recipe.viewValue}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+    <div>
+        <ul class="recipes">
+            <li *ngFor="let recipe of recipes"
+                (click)="onSelect(recipe)">
+                <span class="badge">{{recipe.id}}</span> {{recipe.title}}
+            </li>
+        </ul>
+    </div>
 
-    <div class="recipe">
-        <div *ngIf="selectedValue==='kebabs'">
-            <h2 class="recipe-title">Mediterranean Chicken Kebabs</h2>
-            <img class="main-recipe-image"
-                 src="../../assets/images/Mediterranean-Chicken-Kebabs-1-full-size.jpg">
-            <p class="recipe-description">Juicy and flavorful Grilled Mediterranean Chicken Kebabs marinated in olive
-                oil, lemon juice, garlic, and spices make for a light, delicious and easy dinner.</p>
-            <h4 class="info">Prep Time: <span class="info-data">40 min.</span></h4>
-            <h4 class="info">Cook Time: <span class="info-data">10 min.</span></h4>
-            <h4 class="info">Total Time: <span class="info-data">55 min.</span></h4>
-            <h4 class="info">Servings: <span class="info-data">10 skewers</span></h4>
-            <h4 class="info">Calories: <span class="info-data">228kcal</span></h4>
-            <h4 class="info">Author: <span class="info-data">Neli Howard | <a class="website"
-                       target="_blank"
-                       href="https://www.deliciousmeetshealthy.com/grilled-mediterranean-chicken-kebabs/">Delicious
-                        Meets
-                        Healthy</a></span></h4>
-            <h3>Ingredients:</h3>
-            <h4>Chicken Kebabs</h4>
+    <div class="recipe"
+         *ngIf="selectedRecipe">
+        <h2 class="recipe-title">{{selectedRecipe.title}}</h2>
+        <img class="main-recipe-image"
+             src={{selectedRecipe.img}}>
+        <p class="recipe-description">{{selectedRecipe.desc}}</p>
+        <h4 class="info">Prep Time: <span class="info-data">{{selectedRecipe.timePrep}}
+                {{selectedRecipe.timePrepUnit}}</span></h4>
+        <h4 class="info">Cook Time: <span class="info-data">{{selectedRecipe.timeCook}}
+                {{selectedRecipe.timeCookUnit}}</span></h4>
+        <h4 class="info">Total Time: <span class="info-data">{{selectedRecipe.timeTotal}}
+                {{selectedRecipe.timeTotalUnit}}</span></h4>
+        <h4 class="info">Servings: <span class="info-data">{{selectedRecipe.servings}}
+                {{selectedRecipe.servingsUnit}}</span></h4>
+        <h4 class="info">Calories: <span
+                  class="info-data">{{selectedRecipe.calories}}{{selectedRecipe.caloriesUnit}}</span></h4>
+        <h4 class="info">Author: <span class="info-data">{{selectedRecipe.author}} | <a class="website"
+                   target="_blank"
+                   href={{selectedRecipe.website}}>{{selectedRecipe.websiteDesc}}</a></span></h4>
+        <h3>Ingredients:</h3>
+        <div *ngFor="let group of selectedRecipe.ingredientsGroup">
+            <h4>{{group.heading}}</h4>
             <ul>
-                <li>3 chicken fillets, cut in 1-inch cubes</li>
-                <li>2 red bell peppers</li>
-                <li>2 green bell peppers</li>
-                <li>1 red onion</li>
-            </ul>
-            <h4>Chicken Kebab Marinade</h4>
-            <ul>
-                <li>2/3 cup extra virgin olive oil, divided</li>
-                <li>juice of 1 lemon, divided</li>
-                <li>6 clove of garlic, chopped, divided
+                <li *ngFor="let ingredient of group.ingredientsIndividual">
+                    {{ingredient.quantity}} {{ingredient.quantityUnit}} {{ingredient.ingredient}}
                 </li>
-                <li>2 tsp paprika, divided</li>
-                <li>2 tsp thyme, divided</li>
-                <li>4 tsp oregano, divided</li>
-                <li>4 tsp salt, divided</li>
-                <li>2 tsp freshly ground black pepper, divided</li>
             </ul>
-            <h3>Instructions:</h3>
-            <h4>Marinade</h4>
-            <ol>
-                <li>Mix 1/2 of all ingredients for the marinade in small bowl. Place chicken in a ziplock bag and pour
-                    marinade over it. Marinade in the fridge for at least 30 minutes.</li>
-                <li>Mix the other HALF of the ingredients in the same bowl pour into a ziplock bag with the vegetables.
-                    Marinade for at least 30 minutes.</li>
-                <li>If you are using wood skewers, while the chicken and veggies are marinating, soak the skewers in
-                    water for about 15 minutes. You need to soak wooden skewers in water for about 20- 30 minutes to
-                    keep them from igniting right there on the grill. I have also noticed that it's much easier to slide
-                    out the meat and veggies on your plate if the skewers have been soaked before grilling.</li>
-            </ol>
-            <h4>Chicken Kebabs</h4>
-            <ol>
-                <li>Thread the chicken and peppers and onions on the skewers. I usually place about 5-6 chicken pieces
-                    and a combo of peppers and onion in between.</li>
-                <li>Heat an outdoor grill or indoor grill pan over medium-high heat. Spray the grates lightly with oil
-                    and grill for about 5 minutes on each side, or until the center is no longer pink.</li>
-                <li>You can also bake this Mediterranean chicken skewers in the oven if you want to. Preheat the oven to
-                    425F. Place chicken skewers on roasting racks over two foil-lined baking sheets and bake for about
-                    10-15 minutes, turn over once and bake for another 10 - 15 minutes on the other side, or until they are baked
-                    through.</li>
-            </ol>
-            <h3>Notes:</h3>
-            <p>The nutrition label doesn't take into account that the marinade is discarded.</p>
-            <h3>Nutrition:</h3>
-            <img src="../../assets/images/Annotation 2020-07-11 134958.png">
-            <p><em>Taken from <a class="website"
-                       target="_blank"
-                       href="https://www.deliciousmeetshealthy.com/grilled-mediterranean-chicken-kebabs/">DeliciousMeetsHealthy.com</a></em>
-            </p>
         </div>
+        <h3>Instructions:</h3>
+        <div *ngFor="let group of selectedRecipe.instructionsGroup">
+            <h4>{{group.heading}}</h4>
+            <ol>
+                <li *ngFor="let instruction of group.instructionsIndividual">
+                    {{instruction.step}}
+                </li>
+            </ol>
+        </div>
+        <h3>Notes:</h3>
+        <p *ngFor="let note of selectedRecipe.notes">{{selectedRecipe.notes}}</p>
+        <h3>Nutrition:</h3>
+        <img src={{selectedRecipe.nutrition}}>
+        <p><em>Taken from <a class="website"
+                   target="_blank"
+                   href={{selectedRecipe.takenFromWebsite}}>{{selectedRecipe.takenFromLabel}}</a></em>
+        </p>
     </div>
 </div>
