--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -1,16 +1,24 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .recipe {
-    color: rgb(90,90,90);
+    color: rgb(90, 90, 90);
 }
 
 p {
-    color: rgb(90,90,90);
+    color: rgb(90, 90, 90);
 }
 
-h2, h3, h4 {
-    color: rgb(90,90,90);
+h2,
+h3,
+h4 {
+    color: rgb(90, 90, 90);
 }
 
 h4 {
@@ -45,10 +53,54 @@ h4 {
 
 .copyright {
     font-weight: 300;
-    font-size: .8rem;
+    font-size: 0.8rem;
     margin: 0 1rem 0 1rem;
 }
 
 .footer {
     margin-top: 20rem;
+}
+
+.recipes {
+    margin: 0 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width: 20em;
+}
+.recipes li {
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    background-color: #eee;
+    margin: 0.5em;
+    padding: 0.3em 0;
+    height: 1.6em;
+    border-radius: 4px;
+}
+.recipes li:hover {
+    color: #607d8b;
+    background-color: #ddd;
+    left: 0.1em;
+}
+.recipes li.selected {
+    background-color: #cfd8dc;
+    color: white;
+}
+.recipes li.selected:hover {
+    background-color: #bbd8dc;
+    color: white;
+}
+.recipes .badge {
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: #405061;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    margin-right: 0.8em;
+    border-radius: 4px 0 0 4px;
 }
