--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -38,12 +38,17 @@ h4 {
     font-weight: 300;
 }
 
-.info {
-    text-transform: uppercase;
+.info-author {
+    text-transform: capitalize;
+    font-weight: 400;
 }
 
 .info-data {
-    text-transform: capitalize;
+    text-transform: lowercase;
+    font-weight: 400;
+}
+
+.info-data {
     font-weight: 400;
 }
 
@@ -71,11 +76,12 @@ h4 {
     cursor: pointer;
     position: relative;
     left: 0;
-    background-color: #eee;
+    background-color: rgba(30, 44, 85, 0.2);
     margin: 0.5em;
-    padding: 0.3em 0;
-    height: 1.6em;
-    border-radius: 4px;
+    height: 3em;
+    line-height: 3em;
+    border-radius: 0px;
+    text-align: center;
 }
 .recipes li:hover {
     color: #607d8b;
@@ -89,18 +95,4 @@ h4 {
 .recipes li.selected:hover {
     background-color: #bbd8dc;
     color: white;
-}
-.recipes .badge {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color: #405061;
-    line-height: 1em;
-    position: relative;
-    left: -1px;
-    top: -4px;
-    height: 1.8em;
-    margin-right: 0.8em;
-    border-radius: 4px 0 0 4px;
 }
