--- a/estes-menus/src/app/navigation/navigation.component.html
+++ b/estes-menus/src/app/navigation/navigation.component.html
@@ -12,9 +12,11 @@
             <a mat-list-item
                routerLink="/estes-recipes">Estes Park 2020 Recipes</a>
             <a mat-list-item
-               routerLink="/jrl-recipes">Jesse & Rebekah's Favorites</a>
-            <a mat-list-item
                routerLink="/aa-recipes">Andrea's Favorites</a>
+            <a mat-list-item
+               routerLink="/sja-recipes">Sam & Jess's Favorites</a>
+            <a mat-list-item
+               routerLink="/jrl-recipes">Jesse & Rebekah's Favorites</a>
             <mat-divider></mat-divider>
         </mat-nav-list>
     </mat-sidenav>
