--- a/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
+++ b/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
@@ -3,6 +3,7 @@
     <div>
         <ul class="recipes">
             <li *ngFor="let recipe of recipes"
+                [class.selected]="recipe === selectedRecipe"
                 (click)="onSelect(recipe)">
                 {{recipe.title}}
             </li>
