--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -30,10 +30,6 @@ h4 {
     color: darkcyan;
 }
 
-.main-recipe-image {
-    width: 50%;
-}
-
 .recipe-description {
     font-weight: 300;
 }
@@ -54,7 +50,7 @@ h4 {
 
 .recipes-main {
     margin-left: 1em;
-    margin-right: 0.5em;
+    margin-right: 1em;
 }
 
 .copyright {
@@ -71,19 +67,21 @@ h4 {
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
-    width: 12em;
+    display: flex;
 }
 .recipes li {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
-    position: relative;
-    left: 0;
     background-color: rgba(30, 44, 85, 0.2);
     margin: 0.5em;
-    height: auto;
-    padding: 1em;
     border-radius: 0px;
     text-align: center;
     word-wrap: normal;
+    font-weight: 600;
+    color: rgba(0,0,0,0.5)
 }
 .recipes li:hover {
     color: #607d8b;
@@ -98,12 +96,57 @@ h4 {
     background-color: #bbd8dc;
     color: white;
 }
-
-// @media screen (max-width: 800px) {
-//     .main-image {
-//         width: 100%;
-//     }
-//     @media screen (min-width: 801px) {
-//         width: 50%;
-//     }
-// }
+.no-image {
+    background-color: rgba(150, 150, 150, 0.3);
+    color: rgb(90, 90, 90);
+    text-align: center;
+    padding: 1em;
+}
+.no-image-subtext {
+    font-weight: 300;
+    font-size: 0.8em;
+    line-height: 1.3em;
+}
+.no-image-subtitle {
+    margin-top: -1em;
+    padding: 0;
+    font-weight: 400;
+}
+@media (max-width: 767px) {
+    .main-image {
+        width: 100%;
+    }
+    .no-image {
+        width: 75%;
+    }
+    .flex-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .nutrition-label {
+        width: 100%;
+    }
+    .recipes {
+        justify-content: center;
+        align-items: center;
+    }
+    .recipes li {
+        height: 10em;
+        width: 10em;
+        padding: 0 0.5em;
+    }
+}
+@media (min-width: 768px) {
+    .main-image {
+        width: 25%;
+    }
+    .no-image {
+        width: 25%;
+    }
+    .recipes li {
+        width: 15em;
+        height: 15em;
+        padding: 2em;
+    }
+}
