--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -68,10 +68,11 @@ h4 {
     list-style-type: none;
     padding: 0;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;    
 }
 .recipes li {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     cursor: pointer;
@@ -127,13 +128,9 @@ h4 {
     .nutrition-label {
         width: 100%;
     }
-    .recipes {
-        justify-content: center;
-        align-items: center;
-    }
     .recipes li {
-        height: 10em;
-        width: 10em;
+        height: 8em;
+        width: 8em;
         padding: 0 0.5em;
     }
 }
