home page image/link, formatting

--- a/estes-menus/src/app/home/home.component.html
+++ b/estes-menus/src/app/home/home.component.html
@@ -1,5 +1,8 @@
-<h1>Welcome!</h1>
-<h2>Enjoy this Recipes App</h2>
+<div class="welcome">
+    <a routerLink="/estes-recipes"><img src="../../assets/images/325.jpg"
+        class="home-image"></a>
+    <h2 class="text-on-image-main">Recipes from Estes Park</h2>
+</div>
 <div class="footer">
     <p class="copyright">All effort has been made to give credit to original authors</p>
     <p class="copyright">Questions, corrections
