--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -60,7 +60,9 @@ h4 {
 }
 
 .footer {
-    margin-top: 20rem;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 .recipes {
@@ -133,6 +135,23 @@ h4 {
         width: 8em;
         padding: 0 0.5em;
     }
+    .home-image {
+        width: 100%;
+    }
+    .welcome {
+        position: relative;
+        text-align: center;
+    }
+    .text-on-image-main {
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        transform: translate(-50%);
+        background-color: rgba(255, 255, 255, 0.2);
+        font-weight: 800;
+        color: rgb(35, 41, 59);
+        padding: 1em;        ;
+    }
 }
 @media (min-width: 768px) {
     .main-image {
@@ -145,5 +164,23 @@ h4 {
         width: 15em;
         height: 15em;
         padding: 2em;
+    }
+    .home-image {
+        width: 100%;
+    }
+    .welcome {
+        position: relative;
+        text-align: center;
+    }
+    .text-on-image-main {
+        position: absolute;
+        top: 0px;
+        left: 50%;
+        transform: translate(-50%);
+        background-color: rgba(255, 255, 255, 0.2);
+        font-weight: 800;
+        font-size: 36px;
+        color: rgba(14, 0, 48, 0.75);
+        padding: 1em;
     }
 }
