style, link fixes home page

--- a/estes-menus/src/app/home/home.component.html
+++ b/estes-menus/src/app/home/home.component.html
@@ -1,8 +1,10 @@
-<div class="welcome">
-    <a routerLink="/estes-recipes"><img src="../../assets/images/325.jpg"
-        class="home-image"></a>
-    <h2 class="text-on-image-main">Recipes from Estes Park</h2>
-</div>
+<a routerLink="/estes-recipes">
+    <div class="welcome">
+        <img src="../../assets/images/325.jpg"
+             class="home-image">
+        <h2 class="text-on-image-main">Recipes from Estes Park</h2>
+    </div>
+</a>
 <div class="footer">
     <p class="copyright">All effort has been made to give credit to original authors</p>
     <p class="copyright">Questions, corrections
