--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -147,10 +147,10 @@ h4 {
         top: 25%;
         left: 50%;
         transform: translate(-50%);
-        background-color: rgba(255, 255, 255, 0.2);
+        background-color: rgba(255, 255, 255, 0.3);
         font-weight: 800;
         color: rgb(35, 41, 59);
-        padding: 1em;        ;
+        padding: 1em
     }
 }
 @media (min-width: 768px) {
@@ -180,7 +180,7 @@ h4 {
         background-color: rgba(255, 255, 255, 0.2);
         font-weight: 800;
         font-size: 36px;
-        color: rgba(14, 0, 48, 0.75);
+        color: rgba(14, 0, 48, 0.95);
         padding: 1em;
     }
 }
