--- a/estes-menus/src/app/home/home.component.html
+++ b/estes-menus/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="welcome">
         <img src="../../assets/images/325.jpg"
              class="home-image">
-        <h2 class="text-on-image-main">Recipes from Estes Park</h2>
+        <h2 class="text-on-image-main">Recipes from Estes Park | 2020</h2>
     </div>
 </a>
 <div class="footer">
