--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -71,7 +71,7 @@ h4 {
     padding: 0;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
 }
 .recipes li {
     display: flex;
@@ -84,7 +84,7 @@ h4 {
     text-align: center;
     word-wrap: normal;
     font-weight: 600;
-    color: rgba(0,0,0,0.5)
+    color: rgba(0, 0, 0, 0.5);
 }
 .recipes li:hover {
     color: #607d8b;
@@ -115,6 +115,13 @@ h4 {
     padding: 0;
     font-weight: 400;
 }
+.text-on-image-main {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    font-weight: 800;
+    padding: 1em;
+}
 @media (max-width: 767px) {
     .main-image {
         width: 100%;
@@ -143,14 +150,9 @@ h4 {
         text-align: center;
     }
     .text-on-image-main {
-        position: absolute;
         top: 25%;
-        left: 50%;
-        transform: translate(-50%);
-        background-color: rgba(255, 255, 255, 0.3);
-        font-weight: 800;
+        background-color: rgba(255, 255, 255, 0.4);
         color: rgb(35, 41, 59);
-        padding: 1em
     }
 }
 @media (min-width: 768px) {
@@ -173,14 +175,9 @@ h4 {
         text-align: center;
     }
     .text-on-image-main {
-        position: absolute;
         top: 0px;
-        left: 50%;
-        transform: translate(-50%);
         background-color: rgba(255, 255, 255, 0.2);
-        font-weight: 800;
         font-size: 36px;
         color: rgba(14, 0, 48, 0.95);
-        padding: 1em;
     }
 }
