--- a/estes-menus/src/app/dashboard/dashboard.component.html
+++ b/estes-menus/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,7 @@
-<!-- <div class="recipes-main">
-    <h3>Estes Park 2020 Recipes</h3>
+<div class="recipes-main">
     <ul class="recipes">
         <ng-container *ngFor="let recipe of recipes">
-            <ng-container *ngIf="recipe.group === 'ESTES2020'">
+            <ng-container *ngIf="recipe.group === group">
                 <li [class.selected]="recipe === selectedRecipe"
                     (click)="onSelect(recipe)">
                     {{recipe.title}}
@@ -11,9 +10,4 @@
         </ng-container>
     </ul>
     <app-master-menu [recipe]="selectedRecipe"></app-master-menu>
-</div> -->
-
-<div class="recipes-main">
-    <h3>Estes Park 2020 Recipes</h3>
 </div>
-<app-dashboard [group]="'ESTES2020'"></app-dashboard>
