--- a/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
+++ b/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
@@ -1,14 +1,4 @@
 <div class="recipes-main">
     <h3>Jesse & Rebekah's Favorite Recipes</h3>
-    <ul class="recipes">
-        <ng-container *ngFor="let recipe of recipes">
-            <ng-container *ngIf="recipe.group === 'JRL'">
-                <li [class.selected]="recipe === selectedRecipe"
-                    (click)="onSelect(recipe)">
-                    {{recipe.title}}
-                </li>
-            </ng-container>
-        </ng-container>
-    </ul>
-    <app-master-menu [recipe]="selectedRecipe"></app-master-menu>
 </div>
+<app-dashboard [group]="'JRL'"></app-dashboard>
