update to angular 10; added alt img descriptions; fixed header structuring for accessibility

--- a/estes-menus/src/app/home/home.component.html
+++ b/estes-menus/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <a routerLink="/estes-recipes">
     <div class="welcome">
         <img src="../../assets/images/325.jpg"
-             class="home-image">
-        <h2 class="text-on-image-main">Recipes from Estes Park | 2020</h2>
+             class="home-image" alt="Close up of address numbers affixed to a rock wall with a house in the background">
+        <h1 class="text-on-image-main">Recipes from Estes Park | 2020</h1>
     </div>
 </a>
 <div class="footer">
