--- a/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
+++ b/estes-menus/src/app/jrl-recipes/jrl-recipes.component.html
@@ -1,4 +1,4 @@
 <div class="recipes-main">
-    <h3>Jesse & Rebekah's Favorite Recipes</h3>
+    <h1 class="recipe-group">Jesse & Rebekah's Favorite Recipes</h1>
 </div>
 <app-dashboard [group]="'JRL'"></app-dashboard>
