--- a/estes-menus/src/app/sja-recipes/sja-recipes.component.html
+++ b/estes-menus/src/app/sja-recipes/sja-recipes.component.html
@@ -1,4 +1,4 @@
 <div class="recipes-main">
-    <h3>Sam & Jess's Favorite Recipes</h3>
+    <h1 class="recipe-group">Sam & Jess's Favorite Recipes</h1>
 </div>
 <app-dashboard [group]="'SJA'"></app-dashboard>
