--- a/estes-menus/src/app/aa-recipes/aa-recipes.component.html
+++ b/estes-menus/src/app/aa-recipes/aa-recipes.component.html
@@ -1,3 +1,3 @@
 <div class="recipes-main">
-    <h3>Andrea's Favorite Recipes</h3>
+    <h1 class="recipe-group">Andrea's Favorite Recipes</h1>
 </div>
