--- a/estes-menus/src/app/menus/menus.component.html
+++ b/estes-menus/src/app/menus/menus.component.html
@@ -1,19 +1,4 @@
-<!-- <div class="recipes-main">
-    <h3>Estes Park 2020 Recipes</h3>
-    <ul class="recipes">
-        <ng-container *ngFor="let recipe of recipes">
-            <ng-container *ngIf="recipe.group === 'ESTES2020'">
-                <li [class.selected]="recipe === selectedRecipe"
-                    (click)="onSelect(recipe)">
-                    {{recipe.title}}
-                </li>
-            </ng-container>
-        </ng-container>
-    </ul>
-    <app-master-menu [recipe]="selectedRecipe"></app-master-menu>
-</div> -->
-
 <div class="recipes-main">
-    <h3>Estes Park 2020 Recipes</h3>
+    <h1 class="recipe-group">Estes Park 2020 Recipes</h1>
 </div>
 <app-dashboard [group]="'ESTES2020'"></app-dashboard>
