--- a/estes-menus/src/styles.scss
+++ b/estes-menus/src/styles.scss
@@ -24,6 +24,15 @@ h4 {
 h4 {
     font-weight: 500;
 }
+.recipe-title {
+    color: rgb(90, 90, 90);
+    font-size: 1.5em;
+}
+
+.recipe-group {
+    color: rgb(90, 90, 90);
+    font-size: 1.17em;
+}
 
 .website {
     text-decoration: none;
@@ -105,6 +114,9 @@ h4 {
     text-align: center;
     padding: 1em;
 }
+.no-image-title {
+    font-size: 1.17em;
+}
 .no-image-subtext {
     font-weight: 300;
     font-size: 0.8em;
@@ -114,6 +126,7 @@ h4 {
     margin-top: -1em;
     padding: 0;
     font-weight: 400;
+    font-size: 0.83em;
 }
 .text-on-image-main {
     position: absolute;
@@ -121,6 +134,7 @@ h4 {
     transform: translate(-50%);
     font-weight: 800;
     padding: 1em;
+    font-size: 1.5em;
 }
 @media (max-width: 767px) {
     .main-image {
