added all-recipes component; style changes

--- a/estes-menus/src/app/navigation/navigation.component.html
+++ b/estes-menus/src/app/navigation/navigation.component.html
@@ -17,6 +17,8 @@
                routerLink="/sja-recipes">Sam & Jess's Favorites</a>
             <a mat-list-item
                routerLink="/jrl-recipes">Jesse & Rebekah's Favorites</a>
+            <a mat-list-item
+               routerLink="/all-recipes">All Recipes</a>
             <mat-divider></mat-divider>
         </mat-nav-list>
     </mat-sidenav>
